--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-tst
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>示例标题</title>
+</head>
+<body>
+    <h1>我的第一个标题</h1>
+    <p>我的第一个段落</p>
+    <a href="http://www.baidu.com">点击这里访问百度</a>
+    <img src="图片路径" alt="图片描述">
+</body>
+</html>
