--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>我的第一个标题</h1>
     <p>我的第一个段落</p>
     <a href="http://www.baidu.com">点击这里访问百度</a>
-    <img src="图片路径" alt="图片描述">
+    <img src="C:\Users\BDC\Desktop\Sprite-0001.jpg" alt="图片描述">
 </body>
 </html>
