--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>我的第一个标题</h1>
     <p>我的第一个段落</p>
-    <a href="http://www.baidu.com">点击这里访问百度</a>
+    <a href="https://images.gamebanana.com/img/ss/tools/64ebe92e4ec6d.jpg">点击这里访问百度</a>
     <img src="https://images.gamebanana.com/img/ss/tools/64ebe92e4ec6d.jpg" alt="图片描述">
 </body>
 </html>
