--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="zh">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>示例标题</title>
-</head>
-<body>
-    <h1>我的第一个标题</h1>
-    <p>我的第一个段落</p>
-    <a href="https://images.gamebanana.com/img/ss/tools/64ebe92e4ec6d.jpg">点击这里访问百度</a>
-    <img src="https://images.gamebanana.com/img/ss/tools/64ebe92e4ec6d.jpg" alt="图片描述">
-</body>
-</html>
+    <head>
+          <title>WEBSITE</title>
+    </head>
+    <body>
+        <h1>我的第一个标题</h1>
+        <p>我的第一个段落</p>
+        <a href="">点击这里访问百度</a>
+       <img src="https://images.gamebanana.com/img/ss/tools/64ebe92e4ec6d.jpg" alt="图片描述" >
+       <video src="https://www.bilibili.com/video/BV1YufaYPEaV" alt="图片描述">
+    </body>
+    </html>
