--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
+    <html lang="zh">
     <head>
-          <title>WEBSITE</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>WEBSITE</title>
     </head>
     <body>
         <h1>我的第一个标题</h1>
