--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
-    <html lang="zh">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>WEBSITE</title>
-    </head>
-    <body>
-        <h1>我的第一个标题</h1>
-        <p>我的第一个段落</p>
-        <a href="">点击这里访问百度</a>
-       <img src="https://images.gamebanana.com/img/ss/tools/64ebe92e4ec6d.jpg" alt="图片描述" >
-    </body>
-    </html>
+<html lang="zh">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WEBSITE</title>
+</head>
+
+<body>
+    <image src="https://images.gamebanana.com/img/ss/tools/64ebe92e4ec6d.jpg">
+    </image>
+    <button>
+        <textarea title="input">
+           </textarea>
+    </button>
+</body>
+
+</html>
