--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
 </head>
 
 <body>
-    <image src="https://images.gamebanana.com/img/ss/tools/64ebe92e4ec6d.jpg">
-    </image>
-    <button>
-        <textarea title="input">
-           </textarea>
-    </button>
+
+    <!--USING-->
+    <script src="main.js"></script>
+
+  <!--ELEMENTS-->
+    <textarea onchange="filltag()">Tags</textarea>
+    <button onclick="search()">Search</button>
+
+
+
 </body>
 
 </html>
