--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <button href="https://github.com/IMystman12/name.github.io/archive/refs/heads/main.zip"></button>
+   window.location.href ="https://github.com/IMystman12/name.github.io/archive/refs/heads/main.zip"
 </body>
 
 </html>
