--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>WEBSITE</title>
 </head>
 
-<body>
-   window.location.href ="https://github.com/IMystman12/name.github.io/archive/refs/heads/main.zip"
+<body><script>
+   window.location.href ="https://imystman12.github.io/name.github.io/"
+</script>
 </body>
 
 </html>
