--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body><script>
-   window.location.href ="https://imystman12.github.io/name.github.io/"
+   window.location.href ="https://imystman12.github.io/name.github.io/";
 </script>
 </body>
 
