--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>WEBSITE</title>
 </head>
 
-<body><script>
+<body>
+    <script>
    window.location.href ="https://imystman12.github.io/name.github.io/";
 </script>
 </body>
