--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script>
    window.location.href ="https://imystman12.github.io/name.github.io/";
 </script>
+    <a href=https://github.com/IMystman12/name.github.io/archive/refs/heads/main.zip></a>
 </body>
 
 </html>
