--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <script>
-   window.location.href ="https://imystman12.github.io/name.github.io/";
+   //window.location.href ="https://imystman12.github.io/name.github.io/";
 </script>
     <a href=https://github.com/IMystman12/name.github.io/archive/refs/heads/main.zip></a>
 </body>
